@@ -3,6 +3,7 @@ Version 1.3.0
 
     - Added support for local cache files that can persist across restarts.
     - Added built-in support for encryption and authentication.
+    - In-progress writes are now cancelled when a duplicate write occurs.
     - Changed default for `--blockCacheWriteDelay' from zero to 250ms.
     - Fix obscure and unlikely deadlock bug in ec_protect.c.
     - Allow configurable compression level via --compress=LEVEL.
